2008-06-26  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.schemas.in: 
    * plugins/magnifier/ccm-magnifier.c: Add zoom quality option and manage
                                         mouse change when zoom is enabled.
    * plugins/opacity/ccm-opacity.c: Don't filter window on opacity change.
    * src/ccm-display.c: Add xfixes check and xfixes cursor notify event.
    * src/ccm-window.c: Fix use of buffered pixmap on move.

2008-06-23  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-debug.c:
    * src/ccm-debug.h: add ccm_debug_backtrace function.
    * src/ccm-display.c: add debug statement.
    * src/ccm-screen.c: initialize overlay window context matrix on each paint.
    * src/ccm-window.c: check if matrix is valid with cairo_invert.

2008-06-23  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.schemas.in: 
    * plugins/magnifier/ccm-magnifier.c: Performance improvement and many fix,
                                         change width and height value to 
                                         percent of screen size.
    * data/cairo-compmgr.schemas.in: Remove freeze plugin from default list and
                                     add magnifier plugin.
    * plugins/fade/ccm-fade.c:
    * plugins/freeze/ccm-freeze.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/perf/ccm-perf.c:
    * plugins/shadow/ccm-shadow.c:
    * plugins/magnifier/ccm-magnifier.c: Fix memory leak, initialisation and 
                                         destruction of options.
    * src/ccm-config.c: Fix memory leak.
    * src/ccm-screen.c: Fix memory leak.
    * src/ccm-window.c: 
    * src/ccm.h: Add to ccm_window_set_transform an option to indicate if we 
                 want damage window, and fix transform application.

2008-06-16  Nicolas Bruguier  <gandalfn@club-internet.fr>
